test/error/error_incorrectly_defined.morpho
// User generated errs

var err = Error("FooFoo", 1)

// expect: Error 'ErrorArgs'
